details page: fixing responsive overflow in lists

--- a/source/css/scss/objects/_lists.scss
+++ b/source/css/scss/objects/_lists.scss
@@ -78,13 +78,18 @@
       @media #{$wide} {
         width: 50%;
       }
+
+      @media #{$mobile} {
+        display: block;
+        width: 100%;
+      }
       
       span {
         
         &:last-child {
-          left: 20px;
-          position: relative;
-          top: 15px;
+          float: left;
+          margin-left: 20px;
+          margin-top: 14px;
         }
       
       }
@@ -95,6 +100,13 @@
       display: table-cell;
       font-size: 1.2rem;
       vertical-align: middle;
+
+      @media #{$mobile} {
+        clear: both;
+        float: left;
+        padding-top: 15px;
+        padding-left: 70px;
+      }
       
       p {
         display: table-row;
