--- a/source/css/style.css
+++ b/source/css/style.css
@@ -311,14 +311,24 @@ a {
       @media (max-width: 991px) {
         .article-version-history-list li .column-1 {
           width: 50%; } }
+      @media (max-width: 767px) {
+        .article-version-history-list li .column-1 {
+          display: block;
+          width: 100%; } }
       .article-version-history-list li .column-1 span:last-child {
-        left: 20px;
-        position: relative;
-        top: 15px; }
+        float: left;
+        margin-left: 20px;
+        margin-top: 14px; }
     .article-version-history-list li .column-2 {
       display: table-cell;
       font-size: 1.2rem;
       vertical-align: middle; }
+      @media (max-width: 767px) {
+        .article-version-history-list li .column-2 {
+          clear: both;
+          float: left;
+          padding-top: 15px;
+          padding-left: 70px; } }
       .article-version-history-list li .column-2 p {
         display: table-row;
         width: 100%; }
@@ -509,18 +519,24 @@ section {
     section.article-detail .snapshot {
       background-color: #f5f5f5;
       border: 1px solid #c8c8c8; }
+      @media (max-width: 767px) {
+        section.article-detail .snapshot {
+          display: block; } }
+      @media (max-width: 767px) {
+        section.article-detail .snapshot tbody {
+          display: block; } }
       section.article-detail .snapshot tr {
         vertical-align: middle; }
         @media (max-width: 767px) {
           section.article-detail .snapshot tr {
-            display: table;
+            display: block;
             margin: 15px; } }
       section.article-detail .snapshot td {
         padding-top: 15px;
         padding-bottom: 15px; }
         @media (max-width: 767px) {
           section.article-detail .snapshot td {
-            display: table-row;
+            display: block;
             padding: 0; } }
       section.article-detail .snapshot .column-1 {
         padding-left: 15px;
@@ -543,7 +559,8 @@ section {
         @media (max-width: 767px) {
           section.article-detail .snapshot .column-2 {
             padding: 0;
-            text-align: left; }
+            text-align: left;
+            width: 100%; }
             section.article-detail .snapshot .column-2 dl {
               height: 60px;
               margin: 0;
@@ -560,28 +577,52 @@ section {
             width: 50%; } }
         @media (max-width: 767px) {
           section.article-detail .snapshot .column-3 {
-            padding: 0; }
+            padding: 0;
+            width: 100%; }
             section.article-detail .snapshot .column-3 .btn {
               width: 100%; } }
     section.article-detail .detail td {
       padding-bottom: 15px;
       padding-top: 15px;
       vertical-align: top; }
+      @media (max-width: 767px) {
+        section.article-detail .detail td {
+          display: block;
+          overflow: auto;
+          width: 100%; } }
     section.article-detail .detail dt {
       width: 32%; }
+      @media (max-width: 767px) {
+        section.article-detail .detail dt {
+          width: 50%; } }
     section.article-detail .detail dd {
       width: 68%; }
+      @media (max-width: 767px) {
+        section.article-detail .detail dd {
+          width: 50%; } }
     section.article-detail .detail .column-1 {
       width: 50%; }
+      @media (max-width: 767px) {
+        section.article-detail .detail .column-1 {
+          width: 100%; } }
     section.article-detail .detail .column-2 {
       padding-left: 5%;
       padding-right: 5%; }
+      @media (max-width: 767px) {
+        section.article-detail .detail .column-2 {
+          padding: 0; } }
   section.article-version-map {
     border: 0;
     padding-left: 0; }
+    @media (max-width: 767px) {
+      section.article-version-map {
+        padding: 0; } }
   section.article-version-history {
     border: 0;
     padding-right: 0; }
+    @media (max-width: 767px) {
+      section.article-version-history {
+        padding: 0; } }
 
 .filter {
   margin-top: 40px;
